--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -494,6 +494,25 @@
                         Y: =49
                         ZIndex: =1
 
+                        Title5_5 As label:
+                            Color: =RGBA(50, 49, 48, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                            Height: =Self.Size * 1.8
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =0
+                            PaddingLeft: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Size: =12
+                            Text: |-
+                                ="Br. artikla:   " & ThisItem.Entry_No
+                            VerticalAlign: =VerticalAlign.Top
+                            Width: =Parent.TemplateWidth - 86
+                            X: =24
+                            Y: =18
+                            ZIndex: =1
+
                         Separator6_5 As rectangle:
                             BorderColor: =RGBA(89, 0, 0, 1)
                             Fill: =RGBA(255, 255, 255, 1)
@@ -512,31 +531,12 @@
                             Width: =4
                             ZIndex: =6
 
-                        Group1_2 As group:
+                        Group8 As group:
                             Height: =5
                             Width: =5
-                            X: =40
-                            Y: =40
-                            ZIndex: =16
-
-                            Title5_5 As label:
-                                Color: =RGBA(50, 49, 48, 1)
-                                DisabledColor: =RGBA(166, 166, 166, 1)
-                                FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                                Height: =Self.Size * 1.8
-                                OnSelect: =Select(Parent)
-                                PaddingBottom: =0
-                                PaddingLeft: =0
-                                PaddingRight: =0
-                                PaddingTop: =0
-                                Size: =12
-                                Text: |-
-                                    ="Br. artikla:   " & ThisItem.Entry_No
-                                VerticalAlign: =VerticalAlign.Top
-                                Width: =Parent.TemplateWidth - 86
-                                X: =24
-                                Y: =18
-                                ZIndex: =1
+                            X: =60
+                            Y: =60
+                            ZIndex: =17
 
                             Body1_15 As label:
                                 Color: =RGBA(0, 0, 0, 1)
@@ -665,6 +665,21 @@
                                 Y: =128
                                 ZIndex: =15
 
+                            Icon2 As icon.AddDocument:
+                                BorderColor: =RGBA(89, 0, 0, 1)
+                                Color: =RGBA(89, 0, 0, 1)
+                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                                DisabledColor: =RGBA(244, 244, 244, 1)
+                                Height: =25
+                                Icon: =Icon.ColorPicker
+                                OnSelect: |-
+                                    =Set(tempValue, NalogZaProdajuResEntry.Selected.NalogZaProdajuResEntryQty);
+                                    Set(changeValueModal, true);
+                                Width: =25
+                                X: =230
+                                Y: =52
+                                ZIndex: =16
+
                     Container2_5 As groupContainer.horizontalAutoLayoutContainer:
                         DropShadow: =DropShadow.Light
                         Height: =49
@@ -691,6 +706,61 @@
                                 =200
                             Y: =1
                             ZIndex: =1
+
+                    Container3 As groupContainer.manualLayoutContainer:
+                        DropShadow: =DropShadow.Light
+                        Fill: =RGBA(255, 255, 255, 1)
+                        Height: =Parent.Height * 0.5
+                        RadiusBottomLeft: =4
+                        RadiusBottomRight: =4
+                        RadiusTopLeft: =4
+                        RadiusTopRight: =4
+                        Visible: =changeValueModal
+                        Width: =Parent.Width * 0.8
+                        X: =(Parent.Width - Self.Width) / 2
+                        Y: =(Parent.Height - Self.Height) / 3
+                        ZIndex: =5
+
+                        Button1 As button:
+                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            DisabledFill: =RGBA(244, 244, 244, 1)
+                            Fill: =RGBA(164, 38, 44, 1)
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            HoverColor: =RGBA(255, 255, 255, 1)
+                            HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
+                            OnSelect: |-
+                                =Patch(colPurchaseResEntry, NalogZaProdajuResEntry.Selected, {Quantity: Value(TextInputCanvas1.Value)});
+                                Set(changeValueModal, false);
+                            Size: =12
+                            Text: ="Potvrdi"
+                            Width: =130
+                            X: =(Parent.Width - Self.Width) /2
+                            Y: =(Parent.Height - Self.Height) / 1.1
+                            ZIndex: =1
+
+                        Icon4 As icon.Cancel:
+                            BorderColor: =RGBA(89, 0, 0, 1)
+                            Color: =RGBA(89, 0, 0, 1)
+                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                            DisabledColor: =RGBA(244, 244, 244, 1)
+                            Height: =25
+                            Icon: =Icon.Cancel
+                            OnSelect: =Set(changeValueModal, false);
+                            Width: =25
+                            X: =(Parent.Width - Self.Width) / 1.1
+                            Y: =(Parent.Height - Self.Height) / 10
+                            ZIndex: =2
+
+                        "TextInputCanvas1 As 'Text input'":
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Value: =tempValue.Value
+                            Width: =Parent.Width * 0.6
+                            X: =(Parent.Width - Self.Width) /2
+                            Y: =(Parent.Height - Self.Height) / 2
+                            ZIndex: =3
 
                 SalesResEntryNav As dataCard.blankCard:
                     BorderColor: =RGBA(0, 0, 0, 1)
