--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -245,20 +245,28 @@
                                 Y: =0
                                 ZIndex: =2
 
-                                TextInput3 As pcfDataField.textualColumn:
+                                TextInput3 As PowerApps_CoreControls_DropdownCanvasTemplate_dataField.textualColumn:
                                     FieldDisplayName: ="Text"
                                     FieldName: ="Text"
                                     FieldType: ="s"
                                     FieldVariantName: ="textualColumn"
+                                    Height: =100
                                     Order: =1
+                                    Width: =100
+                                    X: =0
+                                    Y: =0
                                     ZIndex: =14
 
-                                Id1 As pcfDataField.textualColumn:
+                                Id1 As PowerApps_CoreControls_DropdownCanvasTemplate_dataField.textualColumn:
                                     FieldDisplayName: ="Id"
                                     FieldName: ="Id"
                                     FieldType: ="s"
                                     FieldVariantName: ="textualColumn"
+                                    Height: =100
                                     Order: =2
+                                    Width: =100
+                                    X: =0
+                                    Y: =0
                                     ZIndex: =16
 
                     vrtcon_FileType As groupContainer.verticalAutoLayoutContainer:
@@ -382,20 +390,28 @@
                                 Y: =0
                                 ZIndex: =2
 
-                                TextInput4 As pcfDataField.textualColumn:
+                                TextInput4 As PowerApps_CoreControls_DropdownCanvasTemplate_dataField.textualColumn:
                                     FieldDisplayName: ="Text"
                                     FieldName: ="Text"
                                     FieldType: ="s"
                                     FieldVariantName: ="textualColumn"
+                                    Height: =100
                                     Order: =1
+                                    Width: =100
+                                    X: =0
+                                    Y: =0
                                     ZIndex: =15
 
-                                Id2 As pcfDataField.textualColumn:
+                                Id2 As PowerApps_CoreControls_DropdownCanvasTemplate_dataField.textualColumn:
                                     FieldDisplayName: ="Id"
                                     FieldName: ="Id"
                                     FieldType: ="s"
                                     FieldVariantName: ="textualColumn"
+                                    Height: =100
                                     Order: =2
+                                    Width: =100
+                                    X: =0
+                                    Y: =0
                                     ZIndex: =17
 
                     icn_ReloadFiles As icon.Reload:
