--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -614,20 +614,14 @@
                                 Align: ='TextInputCanvas.Align'.Start
                                 Appearance: ="FilledDarker"
                                 BasePaletteColor: =
-                                BorderColor: =""
-                                BorderStyle: =""
                                 DelayOutput: =true
-                                DisabledBorderColor: =""
                                 DisplayMode: =DisplayMode.Edit
                                 Fill: =
-                                FocusedBorderColor: =""
                                 FontColor: =
                                 FontSize: =15
                                 Height: =31
-                                HoverBorderColor: =""
                                 OnChange: |-
                                     =UpdateIf(colTransferResEntries, NalogZaPrenosResEntry.Selected.Entry_No = ThisRecord.Entry_No ,{Quantity: Value(NalogZaProdajuResEntryQty.Value)});
-                                PressedBorderColor: =""
                                 Value: =ThisItem.Quantity
                                 Width: =113
                                 X: =106
@@ -660,20 +654,14 @@
                                 Align: ='TextInputCanvas.Align'.Start
                                 Appearance: ="FilledDarker"
                                 BasePaletteColor: =
-                                BorderColor: =""
-                                BorderStyle: =""
                                 DelayOutput: =true
-                                DisabledBorderColor: =""
                                 DisplayMode: =DisplayMode.Edit
                                 Fill: =
-                                FocusedBorderColor: =""
                                 FontColor: =
                                 FontSize: =15
                                 Height: =31
-                                HoverBorderColor: =""
                                 OnChange: |-
                                     =UpdateIf(colTransferResEntries, NalogZaPrenosResEntry.Selected.Entry_No = ThisRecord.Entry_No ,{LOT_No: Text(NalogZaProdajuLot.Value)})
-                                PressedBorderColor: =""
                                 Value: =ThisItem.LOT_No
                                 Width: =113
                                 X: =74
@@ -731,7 +719,7 @@
                             HoverColor: =RGBA(255, 255, 255, 1)
                             HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
                             OnSelect: |-
-                                =UpdateIf(colPurchaseResEntry, NalogZaProdajuResEntry.Selected.Entry_No = ThisRecord.Entry_No, {Quantity: Value(TextInputCanvas1.Value)});
+                                =UpdateIf(colSalesResEntries, NalogZaProdajuResEntry.Selected.Entry_No = ThisRecord.Entry_No, {Quantity: Value(TextInputCanvas1.Value)});
                                 Set(changeValueModal, false);
                             Size: =12
                             Text: ="Potvrdi"
