--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -632,7 +632,7 @@
                                 Appearance: ="FilledDarker"
                                 BasePaletteColor: =
                                 DelayOutput: =true
-                                DisplayMode: =DisplayMode.Edit
+                                DisplayMode: =DisplayMode.View
                                 Fill: =
                                 FontColor: =
                                 FontSize: =15
@@ -672,7 +672,7 @@
                                 Appearance: ="FilledDarker"
                                 BasePaletteColor: =
                                 DelayOutput: =true
-                                DisplayMode: =DisplayMode.Edit
+                                DisplayMode: =DisplayMode.View
                                 Fill: =
                                 FontColor: =
                                 FontSize: =15
