--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -712,7 +712,7 @@
                             Y: =1
                             ZIndex: =1
 
-                    Container3 As groupContainer.manualLayoutContainer:
+                    EditModal As groupContainer.manualLayoutContainer:
                         DropShadow: =DropShadow.Light
                         Fill: =RGBA(255, 255, 255, 1)
                         Height: =Parent.Height * 0.5
