--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -706,6 +706,67 @@
                             Y: =1
                             ZIndex: =1
 
+                    EditModal_1 As groupContainer.manualLayoutContainer:
+                        DropShadow: =DropShadow.Light
+                        Fill: =RGBA(255, 255, 255, 1)
+                        Height: =Parent.Height * 0.5
+                        RadiusBottomLeft: =4
+                        RadiusBottomRight: =4
+                        RadiusTopLeft: =4
+                        RadiusTopRight: =4
+                        Visible: =changeValueModal
+                        Width: =Parent.Width * 0.8
+                        X: =(Parent.Width - Self.Width) / 2
+                        Y: =(Parent.Height - Self.Height) / 3
+                        ZIndex: =5
+
+                        Button1_1 As button:
+                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            DisabledFill: =RGBA(244, 244, 244, 1)
+                            Fill: =RGBA(164, 38, 44, 1)
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            HoverColor: =RGBA(255, 255, 255, 1)
+                            HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
+                            OnSelect: |-
+                                =Switch(
+                                    propertyToChange,
+                                    "Quantity",
+                                    UpdateIf(colPurchaseResEntry, NabavniNalogResEntry.Selected.Entry_No = ThisRecord.Entry_No, {Quantity: Value(TextInputCanvas1_1.Value)}),
+                                    "LOT_No",
+                                    UpdateIf(colPurchaseResEntry, NabavniNalogResEntry.Selected.Entry_No = ThisRecord.Entry_No, {LOT_No: Text(TextInputCanvas1_1.Value)})
+                                );
+                                Set(changeValueModal, false);
+                            Size: =12
+                            Text: ="Potvrdi"
+                            Width: =130
+                            X: =(Parent.Width - Self.Width) /2
+                            Y: =(Parent.Height - Self.Height) / 1.1
+                            ZIndex: =1
+
+                        Icon4_1 As icon.Cancel:
+                            BorderColor: =RGBA(89, 0, 0, 1)
+                            Color: =RGBA(89, 0, 0, 1)
+                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                            DisabledColor: =RGBA(244, 244, 244, 1)
+                            Height: =25
+                            Icon: =Icon.Cancel
+                            OnSelect: =Set(changeValueModal, false);
+                            Width: =25
+                            X: =(Parent.Width - Self.Width) / 1.1
+                            Y: =(Parent.Height - Self.Height) / 10
+                            ZIndex: =2
+
+                        "TextInputCanvas1_1 As 'Text input'":
+                            DisplayMode: =DisplayMode.Edit
+                            Height: =32
+                            Value: =tempValue
+                            Width: =Parent.Width * 0.6
+                            X: =(Parent.Width - Self.Width) /2
+                            Y: =(Parent.Height - Self.Height) / 2
+                            ZIndex: =3
+
                 PurchaseResEntryNav As dataCard.blankCard:
                     BorderColor: =RGBA(214, 221, 224, 1)
                     BorderStyle: =BorderStyle.Solid
